--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,12 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/echo1699/pokemon-app-full-stack"
   }
 }
